--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,18 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-
+		<dependency>
+		    <groupId>org.keycloak</groupId>
+		    <artifactId>keycloak-spring-boot-starter</artifactId>
+		    <version>10.0.2</version>
+		</dependency>
+		<dependency>
+            <groupId>org.keycloak.bom</groupId>
+            <artifactId>keycloak-adapter-bom</artifactId>
+            <version>3.3.0.Final</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
