--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -41,8 +41,8 @@ moj:
       success-bonus: 400
 
 keycloak:
-   auth-server-url: https://auth.moj.first8.nl/auth
-   realm: Masters-of-java-dev
+   auth-server-url: http://localhost:8180/auth
+   realm: moj
    resource: moj
    public-client: true
    principal-attribute: preferred_username
@@ -68,6 +68,8 @@ spring:
 #    generate-ddl: true
 
 logging.level.nl.moj.server: DEBUG
+logging.level.org.keycloak: DEBUG
+
 logging.level.nl.moj.server.persistence: INFO
 logging.level.nl.moj.server.persistence.TeamMapper: INFO
 logging.level.nl.moj.server.persistence.ResultMapper: INFO
