--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -17,8 +17,8 @@ moj:
       success-bonus: 400
 
 keycloak:
-   auth-server-url: https://auth.moj.first8.nl/auth
-   realm: Masters-of-java-dev
+   auth-server-url: http://localhost:8180/auth
+   realm: moj
    resource: moj
    public-client: true
    principal-attribute: preferred_username
