MOJ-165: adding some new tests and fixing small things

--- a/pom.xml
+++ b/pom.xml
@@ -150,7 +150,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-junit-jupiter</artifactId>
+			<version>2.23.0</version>
+			<scope>test</scope>
+		</dependency>
 		<!-- gui dependencies -->
 		<dependency>
 			<groupId>org.webjars</groupId>
