--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<forceJavacCompilerUse>true</forceJavacCompilerUse>
+					<release>11</release>
 				</configuration>
 			</plugin>
 			<plugin>
