--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -22,7 +22,8 @@ spring:
       enabled: true
       path: /h2
   datasource:
-    url: jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE
+    ## see https://stackoverflow.com/questions/52480973/h2-in-memory-test-db-closed-despite-db-close-on-exit-false/52481318
+    url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
     username: sa
     password: sa
     driver-class-name: org.h2.Driver
