--- a/pom.xml
+++ b/pom.xml
@@ -245,6 +245,9 @@
 	<profiles>
 		<profile>
 			<id>openshift</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
 			<dependencyManagement>
 				<dependencies>
 					<dependency>
