--- a/pom.xml
+++ b/pom.xml
@@ -192,7 +192,7 @@
 				<version>0.8.3</version>
 				<configuration>
 					<includes>
-						<include>nl.*</include>
+						<include>nl/**</include>
 					</includes>
 				</configuration>
 				<executions>
@@ -204,7 +204,7 @@
 					</execution>
 					<execution>
 						<id>report</id>
-						<phase>test</phase>
+						<phase>prepare-package</phase>
 						<goals>
 							<goal>report</goal>
 						</goals>
