MOJ-187: adding bugfix step to pipeline

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -29,3 +29,9 @@ pipelines:
         - maven
         script:
         - mvn -B clean install
+    bugfix/*:
+    - step:
+        caches:
+        - maven
+        script:
+        - mvn -B clean install
