--- a/pom.xml
+++ b/pom.xml
@@ -185,21 +185,21 @@
 					<forceJavacCompilerUse>true</forceJavacCompilerUse>
 				</configuration>
 			</plugin>
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.owasp</groupId> -->
-<!-- 				<artifactId>dependency-check-maven</artifactId> -->
-<!-- 				<version>3.3.2</version> -->
-<!-- 				<configuration> -->
-<!-- 					<failOnError>false</failOnError> -->
-<!-- 				</configuration> -->
-<!-- 				<executions> -->
-<!-- 					<execution> -->
-<!-- 						<goals> -->
-<!-- 							<goal>check</goal> -->
-<!-- 						</goals> -->
-<!-- 					</execution> -->
-<!-- 				</executions> -->
-<!-- 			</plugin> -->
+			<!-- <plugin> -->
+			<!-- <groupId>org.owasp</groupId> -->
+			<!-- <artifactId>dependency-check-maven</artifactId> -->
+			<!-- <version>3.3.2</version> -->
+			<!-- <configuration> -->
+			<!-- <failOnError>false</failOnError> -->
+			<!-- </configuration> -->
+			<!-- <executions> -->
+			<!-- <execution> -->
+			<!-- <goals> -->
+			<!-- <goal>check</goal> -->
+			<!-- </goals> -->
+			<!-- </execution> -->
+			<!-- </executions> -->
+			<!-- </plugin> -->
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
@@ -239,14 +239,14 @@
 					<dependency>
 						<groupId>org.springframework.cloud</groupId>
 						<artifactId>spring-cloud-kubernetes-dependencies</artifactId>
-						<version>0.3.0.RELEASE</version>
+						<version>1.1.4.RELEASE</version>
 						<type>pom</type>
 						<scope>import</scope>
 					</dependency>
 					<dependency>
 						<groupId>org.springframework.cloud</groupId>
 						<artifactId>spring-cloud-dependencies</artifactId>
-						<version>Greenwich.RELEASE</version>
+						<version>Hoxton.SR6</version>
 						<type>pom</type>
 						<scope>import</scope>
 					</dependency>
@@ -269,7 +269,7 @@
 					<plugin>
 						<groupId>io.fabric8</groupId>
 						<artifactId>fabric8-maven-plugin</artifactId>
-						<version>3.5.37</version>
+						<version>4.4.1</version>
 						<executions>
 							<execution>
 								<id>fmp</id>
@@ -279,6 +279,16 @@
 								</goals>
 							</execution>
 						</executions>
+						<configuration>
+							<images>
+								<image>
+									<name>moj-server:1.0.0</name>
+									<build>
+										<from>fabric8/s2i-java:latest-java11</from>
+									</build>
+								</image>
+							</images>
+						</configuration>
 					</plugin>
 				</plugins>
 			</build>
