--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -41,7 +41,7 @@ moj:
       success-bonus: 400
 
 keycloak:
-   auth-server-url: http://localhost:8180/auth
+   auth-server-url: https://auth.moj.first8.nl/auth
    realm: moj
    resource: moj
    public-client: true
