--- a/pom.xml
+++ b/pom.xml
@@ -181,8 +181,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
 				<configuration>
-					<forceJavacCompilerUse>true</forceJavacCompilerUse>
+					<release>11</release>
 				</configuration>
 			</plugin>
 			<!-- <plugin> -->
@@ -280,11 +281,12 @@
 							</execution>
 						</executions>
 						<configuration>
+							<mode>openshift</mode>
 							<images>
 								<image>
-									<name>moj-server:1.0.0</name>
+									<name>server/latest</name>
 									<build>
-										<from>fabric8/s2i-java:latest-java11</from>
+										<from>fabric8/s2i-java:3.1-java11</from>
 									</build>
 								</image>
 							</images>
