--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.4.RELEASE</version>
+		<version>2.3.2.RELEASE</version>
 	</parent>
 
 	<properties>
@@ -165,6 +165,16 @@
 			<artifactId>java-diff-utils</artifactId>
 			<version>4.5</version>
 		</dependency>
+		<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>3.8.1</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.validation</groupId>
+				<artifactId>validation-api</artifactId>
+				<version>2.0.1.Final</version>
+			</dependency>
 	</dependencies>
 
 	<build>
@@ -282,14 +292,7 @@
 						</executions>
 						<configuration>
 							<mode>openshift</mode>
-							<images>
-								<image>
-									<name>server/latest</name>
-									<build>
-										<from>fabric8/s2i-java:3.1-java11</from>
-									</build>
-								</image>
-							</images>
+							<buildStrategy>docker</buildStrategy>
 						</configuration>
 					</plugin>
 				</plugins>
