--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 
 	<properties>
 		<java.version>11</java.version>
+		<skipTests>true</skipTests>
 		<spring-boot.repackage.skip>false</spring-boot.repackage.skip>
 	</properties>
 
@@ -150,12 +151,13 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <!--
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-junit-jupiter</artifactId>
 			<version>2.23.0</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency>-->
 		<!-- gui dependencies -->
 		<dependency>
 			<groupId>org.webjars</groupId>
