Added docker images builds, updated kubernetes deployment set source/target of compiler to Java11

--- a/pom.xml
+++ b/pom.xml
@@ -215,6 +215,8 @@
 				<configuration>
 					<forceJavacCompilerUse>true</forceJavacCompilerUse>
 					<release>11</release>
+					<source>11</source>
+					<target>11</target>
 				</configuration>
 			</plugin>
 			<plugin>
