Fixed wrong data directory mapping in volume mount

--- a/src/deploy/kubernetes/moj-deployment.yaml
+++ b/src/deploy/kubernetes/moj-deployment.yaml
@@ -30,7 +30,7 @@ spec:
             - containerPort: 8080
           volumeMounts:
             - name: moj-data
-              mountPath: /moj-data
+              mountPath: /data
       volumes:
         - name: moj-data
           persistentVolumeClaim:
