[onderhoud] performance validatie kan worden aangezet via deze boolean configuratie-parameter: performance-validation

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,7 @@
 moj:
   server:
     assignment-repo: /tmp/assignments
+    performance-validation: true
     languages:
       java-versions:
         - version: 8
