--- a/src/main/resources/application-docker.yaml
+++ b/src/main/resources/application-docker.yaml
@@ -1,6 +1,7 @@
 moj:
   server:
     assignment-repo: /data/assignments
+    performance-validation: true
     languages:
       java-versions:
         - version: 11
