--- a/src/main/resources/application-docker.yaml
+++ b/src/main/resources/application-docker.yaml
@@ -70,3 +70,6 @@ logging.level.nl.moj.server.persistence: INFO
 logging.level.nl.moj.server.persistence.TeamMapper: INFO
 logging.level.nl.moj.server.persistence.ResultMapper: INFO
 logging.level.org.springframework.integration.file.FileReadingMessageSource: FATAL
+logging.level.org.springframework.web: DEBUG
+logging.level.org.springframework.security: DEBUG
+logging.level.org.keycloak: DEBUG
