--- a/pom.xml
+++ b/pom.xml
@@ -162,10 +162,11 @@
 			<artifactId>webjars-locator</artifactId>
 			<version>0.34</version>
 		</dependency>
+
 		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>stomp-websocket</artifactId>
-			<version>2.3.3</version>
+			<groupId>org.webjars.npm</groupId>
+			<artifactId>stomp__stompjs</artifactId>
+			<version>5.4.4</version>
 		</dependency>
 
 		<dependency>
