Added default pipeline that builds the code to catch unmatched branch names

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,8 +8,10 @@ image: maven:3.5-jdk-11-slim
 pipelines:
   default:
   - step:
+      caches:
+        - maven
       script:
-      - echo "No default pipeline configured."
+        - mvn -B clean install
   branches:
     master:
     - step:
