--- a/src/main/resources/application-docker.yaml
+++ b/src/main/resources/application-docker.yaml
@@ -42,7 +42,7 @@ keycloak:
    realm: moj
    resource: moj
    public-client: true
-   principal-attribute: preferred_username
+   principal-attribute: subject
 
 spring:
   h2:
