--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -46,7 +46,7 @@ keycloak:
    realm: moj
    resource: moj
    public-client: true
-   principal-attribute: preferred_username
+   principal-attribute: subject
 
 spring:
   h2:
