--- a/pom.xml
+++ b/pom.xml
@@ -202,6 +202,11 @@
 			<artifactId>marked</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.webjars.bower</groupId>
+			<artifactId>howler</artifactId>
+			<version>1.1.29</version>
+		</dependency>
 	</dependencies>
 
 	<build>
