--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,17 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-artemis</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>artemis-jms-server</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-spring-boot-starter</artifactId>
@@ -308,7 +319,7 @@
                     <containerizingMode>packaged</containerizingMode>
                     <container>
                         <creationTime>${maven.build.timestamp}</creationTime>
-                        <ports>8080,5000</ports>
+                        <ports>8080,5000,61616</ports>
                         <args>--spring.profiles.active=docker</args>
                         <labels>
                             <commit>${git.commit.id.abbrev}</commit>
