Added compile/test run tracing

--- a/src/main/resources/application-docker.yaml
+++ b/src/main/resources/application-docker.yaml
@@ -80,4 +80,5 @@ logging:
   level:
     nl.moj.server: debug
     org.keycloak: debug
-    org.apache.activemq.audit: error
+    "org.apache.activemq.audit.base": error
+    "org.apache.activemq.audit.message": error
