--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -79,9 +79,8 @@ server:
   forward-headers-strategy: native
 
 logging:
-  pattern:
-    console: "[%X{run}] %clr(%d{${LOG_DATEFORMAT_PATTERN:-yyyy-MM-dd HH:mm:ss.SSS}}){faint} %clr(${LOG_LEVEL_PATTERN:-%5p}) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}"
   level:
     nl.moj.server: debug
     org.keycloak: debug
-    org.apache.activemq.audit: error
+    "org.apache.activemq.audit.base": error
+    "org.apache.activemq.audit.message": error
