--- a/pom.xml
+++ b/pom.xml
@@ -202,7 +202,13 @@
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap</artifactId>
-            <version>4.6.2</version>
+            <version>5.2.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>popper.js</artifactId>
+            <version>2.9.3</version>
         </dependency>
 
         <dependency>
