--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -55,7 +55,7 @@ spring:
       enabled: true
       path: /h2
   datasource:
-    url: jdbc:h2:file:/opt/mojserver/db/test
+    url: jdbc:h2:file:/opt/mojserver/db/test?close_on_exit=false
     username: sa
     password: sa
     driver-class-name: org.h2.Driver
@@ -81,6 +81,6 @@ server:
 logging:
   level:
     nl.moj.server: debug
-    org.keycloak: debug
+    org.keycloak: error
     "org.apache.activemq.audit.base": error
     "org.apache.activemq.audit.message": error
