--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -41,13 +41,13 @@ moj:
       uuid: 77eff9b5-46cb-4420-bddf-fea52716fc6a
       success-bonus: 400
 
-keycloak:
-  auth-server-url: http://localhost:8888
-  realm: moj
-  resource: moj
-  public-client: true
-  principal-attribute: subject
-  use-resource-role-mappings: true
+#keycloak:
+#  auth-server-url: http://localhost:8888
+#  realm: moj
+#  resource: moj
+#  public-client: true
+#  principal-attribute: subject
+#  use-resource-role-mappings: true
 
 spring:
   h2:
@@ -75,6 +75,19 @@ spring:
     broker-url: vm://0
     user: admin
     password: admin
+  security:
+    oauth2:
+      client:
+        registration:
+          keycloak:
+            provider: keycloak
+            client-id: moj
+            authorization-grant-type: authorization_code
+            scope: openid,roles,email,profile
+        provider:
+          keycloak:
+            issuer-uri: http://localhost:8888/realms/moj
+            user-name-attribute: preferred_username
 server:
   forward-headers-strategy: native
 
