--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -16,12 +16,14 @@ moj:
       uuid: 77eff9b5-46cb-4420-bddf-fea52716fc6a
       success-bonus: 400
 
-keycloak:
-   auth-server-url: http://localhost:8180/auth
-   realm: moj
-   resource: moj
-   public-client: true
-   principal-attribute: preferred_username
+#keycloak:
+#   auth-server-url: http://localhost:8180/auth
+#   realm: moj
+#   resource: moj
+#   public-client: true
+#   principal-attribute: preferred_username
+
+debug: true
 
 spring:
   h2:
@@ -40,7 +42,25 @@ spring:
     enabled: false
   jpa:
     generate-ddl: true
-
+  security:
+    oauth2:
+      client:
+        registration:
+          keycloak:
+            provider: keycloak
+            client-id: moj
+            authorization-grant-type: authorization_code
+            scope: openid,roles,email,profile
+            redirect-uri: http://nowhere.none/moj
+        provider:
+          keycloak:
+            authorization-uri: http://nowhere.none/auth
+            jwk-set-uri: http://nowhere.none/jwk
+            user-info-uri: http://nowhere.none/user
+            token-uri: http://nowhere.none/token
+            user-info-authentication-method: client_secret_post
+            user-name-attribute: preferred_username
+server:
 logging:
   level:
     nl.moj.server: debug
