--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -50,12 +50,14 @@ moj:
 #  use-resource-role-mappings: true
 
 spring:
+  jpa:
+    open-in-view: false
   h2:
     console:
       enabled: true
       path: /h2
   datasource:
-    url: jdbc:h2:file:/opt/mojserver/db/test?close_on_exit=false
+    url: jdbc:h2:file:/opt/mojserver/db/test?db_close_on_exit=false
     username: sa
     password: sa
     driver-class-name: org.h2.Driver
@@ -97,3 +99,4 @@ logging:
     org.keycloak: error
     "org.apache.activemq.audit.base": error
     "org.apache.activemq.audit.message": error
+    "org.apache.catalina.loader.WebappClassLoaderBase": error
