--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -57,7 +57,7 @@ spring:
       enabled: true
       path: /h2
   datasource:
-    url: jdbc:h2:file:/opt/mojserver/db/test?db_close_on_exit=false
+    url: jdbc:h2:file:/opt/mojserver/db/test;db_close_on_exit=false
     username: sa
     password: sa
     driver-class-name: org.h2.Driver
