Implemented remote worker client

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ mojserver.log*
 
 # moj data
 moj-data/
-application-local.yaml
+application-controller-local.yaml
+application-worker-local.yaml
+application-single-local.yaml
 .factorypath
 create.sql
