--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,23 +1,6 @@
 moj:
   server:
-    assignment-repo: /tmp/assignments
-    performance-validation: true
-    languages:
-      java-versions:
-        - version: 8
-          name: Java 8
-          compiler: /usr/bin/javac
-          runtime: /usr/bin/java
-        - version: 10
-          name: Java 10
-          compiler: /usr/bin/javac
-          runtime: /usr/bin/java
-    directories:
-      team-directory: teams
-      lib-directory: lib
-      sound-directory: sounds
-      javadoc-directory: javadoc
-      base-directory: moj-data
+    data-directory: "${user.dir}/data"
     limits:
       compile-timeout: PT30S
       compile-output-limits:
@@ -36,18 +19,9 @@ moj:
         output-trunc-message: "...{output truncated}"
         timeout-message: "...{terminated: test time expired}"
     runtime:
-      game-threads: 20
+      game-threads: 10
     competition:
-      uuid: 77eff9b5-46cb-4420-bddf-fea52716fc6a
       success-bonus: 400
-
-#keycloak:
-#  auth-server-url: http://localhost:8888
-#  realm: moj
-#  resource: moj
-#  public-client: true
-#  principal-attribute: subject
-#  use-resource-role-mappings: true
 
 spring:
   jpa:
@@ -57,7 +31,8 @@ spring:
       enabled: true
       path: /h2
   datasource:
-    url: jdbc:h2:file:/opt/mojserver/db/test;db_close_on_exit=false
+    url: jdbc:h2:file:${moj.server.data-directory}/db/mastersofjava;db_close_on_exit=false
+#    url: jdbc:h2:mem:moj;db_close_on_exit=false
     username: sa
     password: sa
     driver-class-name: org.h2.Driver
