--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
     <properties>
         <java.version>17</java.version>
-        <moj.image.base>moj-game-server</moj.image.base>
+        <moj.image.base>moj</moj.image.base>
         <moj.image.tag>17</moj.image.tag>
     </properties>
 
@@ -385,7 +385,7 @@
                             <containerizingMode>packaged</containerizingMode>
                             <container>
                                 <creationTime>${maven.build.timestamp}</creationTime>
-                                <ports>8080,5000,61616</ports>
+                                <ports>8080,5000</ports>
                                 <volumes>/data</volumes>
                                 <args>--spring.profiles.active=docker-single</args>
                                 <labels>
@@ -422,12 +422,12 @@
                                 <image>eclipse-temurin:17-jdk-focal</image>
                             </from>
                             <to>
-                                <image>${moj.image.base}-controller:${moj.image.tag}</image>
+                                <image>${moj.image.base}-worker:${moj.image.tag}</image>
                             </to>
                             <containerizingMode>packaged</containerizingMode>
                             <container>
                                 <creationTime>${maven.build.timestamp}</creationTime>
-                                <ports>8080,5000,61616</ports>
+                                <ports>8080,5000</ports>
                                 <volumes>/data</volumes>
                                 <args>--spring.profiles.active=docker-worker</args>
                                 <labels>
