--- a/src/main/resources/application-docker-controller.yaml
+++ b/src/main/resources/application-docker-controller.yaml
@@ -2,3 +2,13 @@ moj:
   server:
     mode: controller
     data-directory: /data
+spring:
+  security:
+    oauth2:
+      client:
+        provider:
+          keycloak:
+            issuer-uri: ${OIDC_ISSUER_URI}
+      resourceserver:
+        jwt:
+          issuer-uri: ${OIDC_ISSUER_URI}
