--- a/src/main/resources/application-docker-worker.yaml
+++ b/src/main/resources/application-docker-worker.yaml
@@ -1,13 +1,13 @@
 moj:
   server:
     mode: worker
-    controller-endpoint: "http://${CONTROLLER_HOST}:${CONTROLLER_PORT}"
+    controller-endpoint: ${CONTROLLER_URI}
 spring:
   artemis:
     embedded:
       enabled: false
     mode: native
-    broker-url: "tcp://${CONTROLLER_HOST}:61616"
+    broker-url: ${CONTROLLER_BROKER_URI}
   autoconfigure:
     exclude:
       - org.springframework.boot.autoconfigure.h2.H2ConsoleAutoConfiguration
