--- a/src/deploy/docker/worker/docker-compose.yaml
+++ b/src/deploy/docker/worker/docker-compose.yaml
@@ -1,13 +1,11 @@
 version: '2.4'
 services:
   worker:
-    image: moj-worker:17
-    cpus: 1
+    image: docker.first8.nl/moj/moj-worker:17
+    cpus: 3
     mem_reservation: 2g
     mem_limit: 4g
     restart: unless-stopped
     environment:
-      CONTROLLER_URI: "http://host.docker.internal:8080"
-      CONTROLLER_BROKER_URI: "tcp://host.docker.internal:61616"
-#    volumes:
-#      - "./data:/data"
+      CONTROLLER_URI: "<controller-uri> http(s)://..."
+      CONTROLLER_BROKER_URI: "<controller-broker-uri> tcp://...:61616"
