--- a/src/deploy/docker/controller/docker-compose.yaml
+++ b/src/deploy/docker/controller/docker-compose.yaml
@@ -1,8 +1,8 @@
 version: '2.4'
 services:
   controller:
-    image: moj-controller:17
-    cpus: 1
+    image: docker.first8.nl/moj/moj-controller:17
+    cpus: 2
     mem_reservation: 2g
     mem_limit: 4g
     restart: unless-stopped
@@ -10,6 +10,7 @@ services:
       - "127.0.0.1:8080:8080"
       - "127.0.0.1:61616:61616"
     environment:
-      OIDC_ISSUER_URI: http://host.docker.internal:8888/realms/moj
+      OIDC_ISSUER_URI: "<oidc-issuer-url>"
+# enable if you need persistent data
 #    volumes:
-#      - "./data:/data"
+#      - "./data/moj:/data"
